Saving work - finished protoype for membrane class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,13 +22,19 @@ find_package(glfw3 3.4 REQUIRED)
 
 # Add source files
 set(SOURCES
-    cpp/main.cc
-    cpp/glad.c
-    #cpp/CircularMembrane.cpp
+    src/main.cc
+    src/glad.c
+    #src/CircularMembrane.cpp
+    src/RectangularMembrane.cpp
+    src/audioEngine.cpp
 )
 
 set(HEADERS
-    cpp/CircularMembrane.h
+    #include/CircularMembrane.h
+    include/RectangularMembrane.h
+    include/Surface.h
+    include/audioDefs.h
+    include/strikeDefs.h
     dependencies/glad/glad.h
     dependencies/KHR/khrplatform.h
 )
@@ -46,16 +52,18 @@ if(ENABLE_GDB_FLAGS)
         set_target_properties(drum-machine PROPERTIES LINK_FLAGS "/DEBUG")
     else()
         # GCC/Clang: include full debug info, disable optimizations, keep frame pointers
-        target_compile_options(drum-machine PRIVATE -g -O0 -fno-omit-frame-pointer -ggdb)
+        # On macOS with Apple Clang, use DWARF-4 for better gdb compatibility
+        target_compile_options(drum-machine PRIVATE -g -O0 -fno-omit-frame-pointer -gdwarf-4)
         # When using Debug build type, add common debug defines
         if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-            target_compile_definitions(drum-machine PRIVATE DEBUG=N)
+            target_compile_definitions(drum-machine PRIVATE DEBUG=1)
         endif()
     endif()
 endif()
 
 target_include_directories(drum-machine 
         PRIVATE 
+        include
         dependencies
 )
 
