Changed file extension from cc to cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set(SOURCES
     src/main.cc
     src/glad.c
     #src/CircularMembrane.cpp
-    src/RectangularMembrane.cpp
+    src/RectangularMembrane.cc
     src/audioEngine.cpp
 )
 
